--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -50,7 +50,7 @@ Notes:
 * Extend Lambda instrumentation to capture details for Lambda function URL
   and ELB-triggered Lambdas. ({issues}2901[#2901])
 
-* Make `Agent.flush()` return a `Promise` if no callback is passed as param ({issues}2857(#2857)
+* Make `Agent.flush()` return a `Promise` if no callback is passed as param. ({issues}2857(#2857))
 
 [float]
 ===== Bug fixes
