feat: update @opentelemetry/api dep to 1.4.x for OpenTelemetry Bridge
- Bump the dep.
- Update examples/opentelemetry-bridge/ and get dependabot to handle this in
  the future.
- Add an OTel section to the supported-technologies page.
- Add TAV testing of supported @opentelemetry/api versions.
- Add a test for the added `otel.trace.getActiveSpan()` in v1.2.0 of the API.
  This is implemented in the API, so no need for *implementation* changes.

Supersedes: #3211

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -31,6 +31,23 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+* Update the <<opentelemetry-bridge>> supported version of `@opentelemetry/api`
+  to version 1.4.x.
+
+[float]
+===== Bug fixes
+
+[float]
+===== Chores
+
 
 [[release-notes-3.43.0]]
 ==== 3.43.0 2023/03/02
