--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -40,7 +40,7 @@ Notes:
 ===== Features
 
 * Update the <<opentelemetry-bridge>> supported version of `@opentelemetry/api`
-  to version 1.4.x.
+  to version 1.4.x. ({pull}3239[#3239])
 
 [float]
 ===== Bug fixes
