--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -31,6 +31,7 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
+
 ==== Unreleased
 
 [float]
@@ -45,15 +46,16 @@ Notes:
 [float]
 ===== Bug fixes
 
+* Ensure `metadata.service.agent.activation_method` is only sent for APM
+  server version 8.7.1 or later. APM server 8.7.0 included a bug where
+  receiving `activation_method` is harmful. ({issues}3230[#3230])
+
 [float]
 ===== Chores
 
 
 [[release-notes-3.43.0]]
 ==== 3.43.0 2023/03/02
-
-[float]
-===== Breaking changes
 
 [float]
 ===== Features
@@ -72,7 +74,7 @@ Notes:
 
 * Make `Agent.flush()` return a `Promise` if no callback is passed as param.
   This means that flush is now `await`able: `await apm.flush()`.
-  ({issues}2857(#2857))
+  ({issues}2857[#2857])
 
 [float]
 ===== Bug fixes
