--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -32,10 +32,8 @@ Notes:
 === Node.js Agent version 3.x
 
 
-==== Unreleased
-
-[float]
-===== Breaking changes
+[[release-notes-3.44.0]]
+==== 3.44.0 2023/04/03
 
 [float]
 ===== Features
@@ -49,9 +47,6 @@ Notes:
 * Ensure `metadata.service.agent.activation_method` is only sent for APM
   server version 8.7.1 or later. APM server 8.7.0 included a bug where
   receiving `activation_method` is harmful. ({issues}3230[#3230])
-
-[float]
-===== Chores
 
 
 [[release-notes-3.43.0]]
