fix: receiving central config with `sanitize_field_names` would crash
The crash was with init of config.sanitizeFieldNamesRegExp in the central-config
code path. I've fixed that. Other updates:

- Updated config normalization of this var -- and similar config vars
  that set a `${name}RegExp` array var -- initialize the RegExp array to empty
  before populating it.
- Updated the tests to ensure we always add to "central-config-enabled.test.js"
  whenever a new supported central config var is added.
- Updated central-config handling to try/catch and log.error instead of
  *crashing* if there is an unexpected exception. Partially applied central
  config isn't great, but it is better than having a DoS avenue where central
  config can crash agents. For example:
    {"log.level":"error",...,"remoteConf":{"sanitize_field_names":"password, pass*"},"error":{"type":"TypeError","message":"Cannot read properties of undefined (reading 'push')","stack_trace":"..."},"message":"Central config error: exception while applying changes"}

Fixes: #3247

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -32,6 +32,25 @@ Notes:
 === Node.js Agent version 3.x
 
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+[float]
+===== Bug fixes
+
+* Fix an issue where the APM agent receiving central config (from APM server)
+  containing a value for `sanitized_field_names` would crash.
+  ({issues}3247[#3247])
+
+[float]
+===== Chores
+
+
 [[release-notes-3.44.0]]
 ==== 3.44.0 2023/04/03
 
