--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -32,6 +32,24 @@ Notes:
 === Node.js Agent version 3.x
 
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+[float]
+===== Bug fixes
+
+[float]
+===== Chores
+
+- Restrict Next.js instrumentation to `<13.3.0` for now, because of a known
+  issue with instrumentating the `next@13.3.0` dev server. ({issues}3263[#3263])
+
+
 [[release-notes-3.44.1]]
 ==== 3.44.1 2023/04/06
 
