--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -32,6 +32,25 @@ Notes:
 === Node.js Agent version 3.x
 
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+[float]
+===== Bug fixes
+
+* Fix an edge case in instrumentation of `http.request()` and `https.request()`
+  with node v19.9.0 and recently nightly builds of node v20.
+  ({issues}3261[#3261])
+
+[float]
+===== Chores
+
+
 [[release-notes-3.44.1]]
 ==== 3.44.1 2023/04/06
 
