--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -62,7 +62,7 @@ code (`import 'elastic-apm-node/start.js'` or `require('elastic-apm-node/start.j
 in a Worker will *not* start the APM agent. Instead, one must use:
 `require('elastic-apm-node').start()` or equivalent.
 
-* Avoid redaction of response headers while extrating `transaction.context.response`
+* Avoid redaction of response headers while extracting `transaction.context.response`
   data from the HTTP response. Contributed by @lytc. ({pull}3427[#3427])
 
 [float]
