fix: setGlobalLabel should not error when apm is inactive (#3443)
Fixes: #3442

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -67,6 +67,9 @@ See <<esm>> for full details.
 [float]
 ===== Bug fixes
 
+* Ensure `apm.setGlobalLabel(...)` does not throw an error when apm is inactive.
+  ({issues}3442[#3442])
+
 [float]
 ===== Chores
 
