--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -32,10 +32,8 @@ Notes:
 === Node.js Agent version 3.x
 
 
-==== Unreleased
-
-[float]
-===== Breaking changes
+[[release-notes-3.48.0]]
+==== 3.48.0 - 2023/07/07
 
 [float]
 ===== Features
@@ -83,9 +81,6 @@ See <<esm>> for full details.
 
 * Fix a possible crash when using `getSignedUrl()` from `@aws-sdk/s3-request-presigner`
   due to a bug in `@aws-sdk/client-s3` instrumentation. ({issues}3464[#3464])
-
-[float]
-===== Chores
 
 
 [[release-notes-3.47.0]]
